https://techjira.zalando.net/browse/CD-406 Simplify the whole deployment process to a common (configurable) case
